added a new section

--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -71,16 +71,13 @@
 	<span style="color: #333333; font-weight: 300;">For those of you who wants to know everything (WHY?!1), I've got couple illness' I can mention. First is </span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a><span style="color: #333333; font-weight: 300;"> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "</span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a><span style="color: #333333; font-weight: 300;">", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF?!). When people asks what they are I just call them it's sun allergy and they buy it! I don't have any more diseases, I mean, hope not.</span>
 	Since we started on my medical background, I think I can also mention here that sometimes I'm having sleep paralysis.
 	
-	<h3><span style="color: #333333; font-weight: 300;">Now, what else is there, let me think, hmm, eureka! My goals</span></h3>
 
-	You can find more @ <a href="http://www.43things.com/person/Batuhan_Icoz">my 43things account</a>.
-
-	<h2>Lists</h2>
+	<h2>Some general information</h2>
 	<div class="row show-grid" title="One-third and two-thirds layout">
 		<div class="span-two-thirds column">
-			<ol>
+			<ul>
 				<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey.</li>
-			</ol>
+			</ul>
 		</div>
     	<div class="span-one-third column">
 			<h4>Goals</h4>
@@ -97,9 +94,8 @@
 			</div>
   		</div><!-- /row -->
 
+<h2>Facts about me</h2>
   <div class="row">
-  <h4>Facts</h4>
-
     <div class="span8 columns">
       <ul>
 		<li>I don’t believe in any religion, I’m Agnostic.</li>
@@ -138,6 +134,37 @@
 
   </div><!-- /row -->
 	That’s enough facts for you.
+	
+	<h2>I like and suggest</h2>
+		<div class="row show-grid" title="I like & suggest">
+    		<div class="span-one-third column">
+				<h3>TV Series</h3>
+					<ul>
+						<li>Doctor Who</li>
+						<li>Torchwood</li>
+						<li>True Blood</li>
+						<li>Chuck</li>
+					</ul>
+			</div>
+    		<div class="span-one-third column">
+				<h3>Movies</h3>
+					<ul>
+						<li>Doctor Who</li>
+						<li>Torchwood</li>
+						<li>True Blood</li>
+						<li>Chuck</li>
+					</ul>
+			</div>
+			<div class="span-one-third column">
+				<h3>Books</h3>
+					<ul>
+						<li>Doctor Who</li>
+						<li>Torchwood</li>
+						<li>True Blood</li>
+						<li>Chuck</li>
+					</ul>
+			</div>
+  		</div><!-- /row -->
 
 	<address>Now you know it all, happy?</address><address>All is not enough? Want to know anything else? Just <a href="http://batu.me/contact/">contact me</a>.</address>
 	</div>
