--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -31,41 +31,17 @@
       </p>
     </div>
     <div class="span5 columns">
-      <h3>What's included</h3>
-      <p>Bootstrap comes complete with compiled CSS, uncompiled, and example templates.</p>
-      <ul>
-        <li>All original .less files</li>
-        <li>Fully compiled and minified CSS</li>
-        <li>Complete styleguide documentation</li>
-        <li>Example page template (more to come soon)</li>
-      </ul>
+
     </div>
   </div><!-- /row -->
   <div class="row">
 	<div class="span16 columns">
 
-	I’m a 17-year-old Turkish web developer, amateur entrepreneur, and high school junior.
-
-	As of August 1, I'm working as a web developer for an interactive media agency called <a href="http://16pixel.com">16pixel</a>[tr].
-
-	I'm studying on English language and English Literature at <a href="http://bursacumhuriyetlisesi.k12.tr/">Bursa Cumhuriyet Lisesi</a>[tr].
-	
-	There some many things I can mention about me and I want to mention all of them. Dunno how, why or where to start though.
-
-	In sidebar, you can find my current job information, my full name, date of birth, links to my social accounts, <a href="http://twitter.com/batuhanicoz">my latest tweets</a>, my latest check-in's, my whereabouts and much more like those.
-
-	I think I can list some stuff here. I'll do that.
+	There some many things I can mention about me and I want this page to include all that. Best way to do that (both for me and the readers) is to list stuff. So, that's why there are lots of lists here.
 
 	I love 4 things more than anything, first is, well, guess what, it's sex. Other than that, reading books. I know, I know, what a cliché... But, I do, and can explain why. When I'm watching a movie, I'm limited. I'm limited to effect team's budget, I'm limited to directors imagination etc. But when I read, I'm only limited to my imagination and, that's my friend, is good as endless.
 
-	Third thing I love is watching TV series. I love them more than movies (less than books). And I think that's because I like their continuity. I've got couple favorites, first one is <a href="http://en.wikipedia.org/wiki/Doctor_Who">Doctor Who</a>. THE BEST FREAKING SHOW EVER TELEVISED. Here is a list of the shows I recommend you to watch: <a href="http://en.wikipedia.org/wiki/Torchwood">Torchwood</a>, True Blood, X-Files, Chuck, Arrested Development, The IT Crowd, House M.D., The Big Bang Theory, How I Met Your Mother, Stargate (especially SG-1), Supernatural, Skins UK, Misfits, Suits, White Collar, Being Human, Lie to me, Primeval. (I've watched literally more than hundred shows, can't remember all, some doesn't worth remembering though.)
-	<blockquote>Related information(s):
-	<ul>
-		<li>Two of my favorite torrent sites are <a href="http://www.torrentkit.com">TorrentKit</a> and <a href="http://thepiratebay.org">Pirate Bay</a>.</li>
-		<li>I'm using addic7ed.com for subtitles.</li>
-		<li>I'm using MPlayer X, Movist or VLC Player for watching media.</li>
-	</ul>
-	</blockquote>
+
 	Fourth thing is programming. For now, I love programming (therefore I love my job). But I think, sometime in the future, I'll bored to do anything I've already done several times with several different languages. I've started to use <a href="http://php.net">PHP</a> and used it ever since. In time I've learned <a href="http://www.codeigniter.com">CodeIgniter</a> and FUEL Framework. In 2011, I've started to learn two other (and their most popular web frameworks) languages, Python (and <a href="https://www.djangoproject.com/">Django framework</a>), Ruby (and Rails framework). Time will come and I'll choose one and be expert of it, until then, I'm exploring languages (and their frameworks) other than PHP.
 	
 	<span style="color: #333333; font-weight: 300;">For those of you who wants to know everything (WHY?!1), I've got couple illness' I can mention. First is </span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a><span style="color: #333333; font-weight: 300;"> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "</span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a><span style="color: #333333; font-weight: 300;">", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF?!). When people asks what they are I just call them it's sun allergy and they buy it! I don't have any more diseases, I mean, hope not.</span>
@@ -77,6 +53,7 @@
 		<div class="span-two-thirds column">
 			<ul>
 				<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey.</li>
+				<li>I'm studying on English language and English Literature at <a href="http://bursacumhuriyetlisesi.k12.tr/">Bursa Cumhuriyet Lisesi</a>[tr].</li>
 			</ul>
 		</div>
     	<div class="span-one-third column">
@@ -136,6 +113,9 @@
 	That’s enough facts for you.
 	
 	<h2>I like and suggest</h2>
+	<p>I <strong>love</strong> TV series, more than movies and sometimes more than books. I think it's because their continuity.
+	<br />
+	Also, I love books more than movies because movies (and TV series too) are "limited", limited to directors imagination, crew, budget and stuff. Reading is more limitless.</p>
 		<div class="row show-grid" title="I like & suggest">
     		<div class="span-one-third column">
 				<h3>TV Series</h3>
@@ -144,25 +124,41 @@
 						<li>Torchwood</li>
 						<li>True Blood</li>
 						<li>Chuck</li>
+						<li>X-Files</li>
+						<li>Arrested Development</li>
+						<li>The I.T. Crowd</li>
+						<li>House M.D.</li>
+						<li>The Big Bang Theory</li>,
+						<li>How I Met Your Mother</li>
+						<li>Stargate series (especially SG-1)</li>
+						<li>Supernatural</li>
+						<li>Skins UK</li>
+						<li>Misfits</li>
+						<li>Suits</li>
+						<li>White Collar</li>
+						<li>Primeval</li>
 					</ul>
 			</div>
     		<div class="span-one-third column">
 				<h3>Movies</h3>
 					<ul>
-						<li>Doctor Who</li>
-						<li>Torchwood</li>
-						<li>True Blood</li>
-						<li>Chuck</li>
+						<li>Stargate</li>
+						<li>Star Wars</li>
+						<li>Minority Report (2002)</li>
+						<li>Limitless</li>
+						<li>[TR] Kaybedenler Klubü</li>
 					</ul>
 			</div>
 			<div class="span-one-third column">
 				<h3>Books</h3>
-					<ul>
-						<li>Doctor Who</li>
-						<li>Torchwood</li>
-						<li>True Blood</li>
-						<li>Chuck</li>
-					</ul>
+					<i>Requires translation</i>
+					<!-- ul> 
+						<li>Sil Baştan by <i>Ken Grimwood</i></li>
+						<li>Kayboluş by <i>Ken Grimwood</i></li>
+						<li>İroni by <i>Max Barry</i></li>
+						<li>Empati by <i>Adem Fawer</i></li>
+						<li>Olasılıksız by <i>Adem Fawer</i></li>
+					</ul -->
 			</div>
   		</div><!-- /row -->
 
