--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -11,6 +11,7 @@
   <div class="page-header">
     <h1>About Me <small>Who am I, where I was born, how I grew up and so on.</small></h1>
   </div>
+
   <div class="row">
     <div class="span16 columns">
     <div class="alert-message warning">
@@ -18,22 +19,20 @@
     </div>
 	</div>
   </div><!-- /row -->
-  <div class="row">
-    <div class="span6 columns">
+	<div class="row show-grid" title="One-third and two-thirds layout">
+		<div class="span-two-thirds column">
       <h3>A brief introduction</h3>
 	  <p>Hello, my name is Fırat Batuhan İçöz and I'm a web developer.</p>
 	  <p>I have (co-)founded few projects/start-up's, most notably Sosyal Radyo.</p>
 	  <p>And I'm also a high school junior who's studying foreign languages.</p>
-	</div>
-    <div class="span5 columns">
-      <p>
-      	<img width=250px src="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3.jpg" />
-      </p>
-    </div>
-    <div class="span5 columns">
-
-    </div>
-  </div><!-- /row -->
+		</div>
+  	<div class="span-one-third column">
+	      <p>
+	      	<img width=250px src="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3.jpg" />
+	      </p>
+			</div>
+		</div><!-- /row -->
+		
   <div class="row">
 	<div class="span16 columns">
 
