--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -17,18 +17,24 @@
     <div class="alert-message warning">
       <p><strong>WARNING!</strong> This page is un-finished and can't be used as reference.</p>
     </div>
+    <div class="alert-message info">
+      <p><strong>Notice</strong> This page was imported from batu.me/about-me/ and right now it's a mess.</p>
+    </div>
 	</div>
   </div><!-- /row -->
 	<div class="row show-grid" title="One-third and two-thirds layout">
 		<div class="span-two-thirds column">
       <h3>A brief introduction</h3>
-	  <p>Hello, my name is Fırat Batuhan İçöz and I'm a web developer.</p>
-	  <p>I have (co-)founded few projects/start-up's, most notably Sosyal Radyo.</p>
-	  <p>And I'm also a high school junior who's studying foreign languages.</p>
+		<ul>
+			<li>My full name is Fırat Batuhan İçöz</li>
+			<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey to a Turkish family.</li>
+			<li>I'm studying on English language and English Literature at <a href="http://bursacumhuriyetlisesi.k12.tr/">Bursa Cumhuriyet Lisesi</a>[tr] as a high school junior.</li>
+			<li>I work as a web developer</li>
+		</ul>
 		</div>
   	<div class="span-one-third column">
 	      <p>
-	      	<img width=250px src="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3.jpg" />
+	      	<img width="250px" src="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3.jpg" />
 	      </p>
 			</div>
 		</div><!-- /row -->
@@ -38,21 +44,19 @@
 
 	There some many things I can mention about me and I want this page to include all that. Best way to do that (both for me and the readers) is to list stuff. So, that's why there are lots of lists here.
 
-	I love 4 things more than anything, first is, well, guess what, it's sex. Other than that, reading books. I know, I know, what a cliché... But, I do, and can explain why. When I'm watching a movie, I'm limited. I'm limited to effect team's budget, I'm limited to directors imagination etc. But when I read, I'm only limited to my imagination and, that's my friend, is good as endless.
-
-
-	Fourth thing is programming. For now, I love programming (therefore I love my job). But I think, sometime in the future, I'll bored to do anything I've already done several times with several different languages. I've started to use <a href="http://php.net">PHP</a> and used it ever since. In time I've learned <a href="http://www.codeigniter.com">CodeIgniter</a> and FUEL Framework. In 2011, I've started to learn two other (and their most popular web frameworks) languages, Python (and <a href="https://www.djangoproject.com/">Django framework</a>), Ruby (and Rails framework). Time will come and I'll choose one and be expert of it, until then, I'm exploring languages (and their frameworks) other than PHP.
+	###TO BE EDITED###
 	
 	<span style="color: #333333; font-weight: 300;">For those of you who wants to know everything (WHY?!1), I've got couple illness' I can mention. First is </span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a><span style="color: #333333; font-weight: 300;"> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "</span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a><span style="color: #333333; font-weight: 300;">", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF?!). When people asks what they are I just call them it's sun allergy and they buy it! I don't have any more diseases, I mean, hope not.</span>
 	Since we started on my medical background, I think I can also mention here that sometimes I'm having sleep paralysis.
-	
+	###TO BE EDITED###
 
 	<h2>Some general information</h2>
 	<div class="row show-grid" title="One-third and two-thirds layout">
 		<div class="span-two-thirds column">
 			<ul>
-				<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey.</li>
-				<li>I'm studying on English language and English Literature at <a href="http://bursacumhuriyetlisesi.k12.tr/">Bursa Cumhuriyet Lisesi</a>[tr].</li>
+				<li>I usually code with PHP but I'm learning Ruby (on Rails) and will be using it in the future</li>
+				<li>I'm good with frameworks, OOP and MVC</li>
+				<li>I use CodeIgniter</li>
 			</ul>
 		</div>
     	<div class="span-one-third column">
@@ -70,7 +74,7 @@
 			</div>
   		</div><!-- /row -->
 
-<h2>Facts about me</h2>
+<h2>Some (funny) facts about me</h2>
   <div class="row">
     <div class="span8 columns">
       <ul>
