added last updated to about

--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -55,8 +55,8 @@
 		<div class="span-two-thirds column">
 			<ul>
 				<li>I usually code with PHP but I'm learning Ruby (on Rails) and will be using it in the future</li>
-				<li>I'm good with frameworks, OOP and MVC</li>
-				<li>I use CodeIgniter</li>
+				<li>I like/am good at frameworks, OOP and MVC</li>
+				<li>I'm using CodeIgniter, a PHP Framework, for more than a year</li>
 			</ul>
 		</div>
     	<div class="span-one-third column">
@@ -74,7 +74,7 @@
 			</div>
   		</div><!-- /row -->
 
-<h2>Some (funny) facts about me</h2>
+<h2>Some facts about me</h2>
   <div class="row">
     <div class="span8 columns">
       <ul>
@@ -165,7 +165,10 @@
 			</div>
   		</div><!-- /row -->
 
-	<address>Now you know it all, happy?</address><address>All is not enough? Want to know anything else? Just <a href="http://batu.me/contact/">contact me</a>.</address>
+	<p>Now you know it all, happy?</p><p>All is not enough? Want to know anything else? Just <a href="http://batu.me/contact/">contact me</a>.</p>
+	
+	<hr />
+	<p><strong>Last updated:</strong> {{ last_updated }}</p>
 	</div>
   </div>
 </section>
