added share buttons

--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -168,7 +168,8 @@
 	<p>Now you know it all, happy?</p><p>All is not enough? Want to know anything else? Just <a href="http://batu.me/contact/">contact me</a>.</p>
 	
 	<hr />
-	<p><strong>Last updated:</strong> {{ last_updated }}</p>
+	<p><strong>Last updated:</strong> {{ last_updated }}
+	<br /><fb:like href="" send="true" width="450" show_faces="true" font=""></fb:like><div class="g-plusone"></div><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="batuhanicoz" data-related="imbatuhan:English-only">Tweet</a></p>
 	</div>
   </div>
 </section>
