--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -70,10 +70,19 @@
 			</p>
 		</footer>
     </div>
-    
+    <div id="fb-root"></div>
     <!-- Le javascript -->
     <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
     <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+	<!-- google +1 button -->
+	<script type="text/javascript">
+	  (function() {
+	    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+	    po.src = 'https://apis.google.com/js/plusone.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+	  })();
+	</script>
+	<script src="http://connect.facebook.net/en_US/all.js#appId=204305079632336&amp;xfbml=1"></script>
 	<!-- Piwik --> 
 	<script type="text/javascript">
 	var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.batu.me/" : "http://stats.batu.me/");
