--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -66,6 +66,7 @@
     <div class="container">
     	<footer>
         	<p>
+				<fb:like href="http://www.facebook.com/pages/Batuhan-Icoz/223563634322794" send="true" width="450" show_faces="true" font=""></fb:like>
 				&copy; 2011 Fırat Batuhan İçöz
 			</p>
 		</footer>
