--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -169,7 +169,7 @@
 	
 	<hr />
 	<p><strong>Last updated:</strong> {{ last_updated }}
-	<br /><fb:like href="" send="true" width="450" show_faces="true" font=""></fb:like><div class="g-plusone"></div><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="batuhanicoz" data-related="imbatuhan:English-only">Tweet</a></p>
+	<br /><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="batuhanicoz" data-related="imbatuhan:English-only">Tweet</a><div class="g-plusone" data-class="small"></div></p>
 	</div>
   </div>
 </section>
