adding grid system to footer

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -65,10 +65,14 @@
       
     <div class="container">
     	<footer>
-        	<p>
-				<fb:like href="http://www.facebook.com/pages/Batuhan-Icoz/223563634322794" send="true" width="450" show_faces="true" font=""></fb:like>
-				&copy; 2011 Fırat Batuhan İçöz
-			</p>
+        	<div class="row show-grid">
+			    <div class="span-two-thirds column">
+			    	<fb:like href="http://www.facebook.com/pages/Batuhan-Icoz/223563634322794" send="true" width="450" show_faces="true" font=""></fb:like>
+			    </div>
+	 			<div class="span-one-third column">
+	 				<p>&copy; 2011 Fırat Batuhan İçöz</p>
+	 			</div>
+		  </div><!-- /row -->
 		</footer>
     </div>
     <div id="fb-root"></div>
