deleted social icons

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -48,7 +48,7 @@
 	
 	{% if app.bi_browser_lang == "tr-TR" %}
 	{% if app.bi_domain == "batuhanicoz.com" %}
-	<div class="container">
+	<!-- div class="container">
 		<section id="language_alert">
 	      <div class="alert-message block-message info">
 	        <p><strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu da olduğunu hatırlatayım dedim.</p>
@@ -57,7 +57,7 @@
 	        </div>
 	      </div>
 		</section>
-    </div>
+    </div -->
 	{% endif %}
 	{% endif %}
 	
@@ -69,7 +69,7 @@
 			    <div class="span-two-thirds column">
 			    	<fb:like href="http://www.facebook.com/pages/Batuhan-Icoz/223563634322794" send="true" width="450" show_faces="true" font=""></fb:like>
 			    </div>
-	 			<div class="span-one-third column">
+	 			<div class="span-one-third column" align="right">
 	 				<p>&copy; 2011 Fırat Batuhan İçöz</p>
 	 			</div>
 		  </div><!-- /row -->
