--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -167,9 +167,7 @@
 
 	<p>Now you know it all, happy?</p><p>All is not enough? Want to know anything else? Just <a href="http://batu.me/contact/">contact me</a>.</p>
 	
-	<hr />
-	<p><strong>Last updated:</strong> {{ last_updated }}
-	<br /><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="batuhanicoz" data-related="imbatuhan:English-only">Tweet</a><div class="g-plusone" data-class="small"></div></p>
+	<h6><strong>Last updated:</strong> {{ last_updated }}</h6>
 	</div>
   </div>
 </section>
