--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -17,9 +17,6 @@
     <div class="alert-message warning">
       <p><strong>WARNING!</strong> This page is un-finished and can't be used as reference.</p>
     </div>
-    <div class="alert-message info">
-      <p><strong>Notice</strong> This page was imported from batu.me/about-me/ and right now it's a mess.</p>
-    </div>
 	</div>
   </div><!-- /row -->
 	<div class="row show-grid" title="One-third and two-thirds layout">
@@ -44,13 +41,6 @@
 
 	There some many things I can mention about me and I want this page to include all that. Best way to do that (both for me and the readers) is to list stuff. So, that's why there are lots of lists here.
 
-	###TO BE EDITED###
-	
-	<span style="color: #333333; font-weight: 300;">For those of you who wants to know everything (WHY?!1), I've got couple illness' I can mention. First is </span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a><span style="color: #333333; font-weight: 300;"> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "</span><a style="font-weight: 300;" href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a><span style="color: #333333; font-weight: 300;">", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF?!). When people asks what they are I just call them it's sun allergy and they buy it! I don't have any more diseases, I mean, hope not.</span>
-	Since we started on my medical background, I think I can also mention here that sometimes I'm having sleep paralysis.
-	###TO BE EDITED###
-
-	<h2>Some general information</h2>
 	<div class="row show-grid" title="One-third and two-thirds layout">
 		<div class="span-two-thirds column">
 			<ul>
@@ -113,7 +103,7 @@
     </div>
 
   </div><!-- /row -->
-	That’s enough facts for you.
+	Another fact is I have <a href="http://en.wikipedia.org/wiki/Hemihypertrophy">hemihypertrophy</a> and that means one side (left) of my body is bigger than the other side of it. Annoying but harmless. I also have skin tumors called "<a href="http://en.wikipedia.org/wiki/Hemangioma">hemangioma</a>", again they're harmless but annoying, and it's only noticeable when I'm ill, angry or horny (WTF FSM?!). I think this is where I should also mention that sometimes I'm having sleep paralysis. <br /> And that’s enough facts for you.
 	
 	<h2>I like and suggest</h2>
 	<p>I <strong>love</strong> TV series, more than movies and sometimes more than books. I think it's because their continuity.
@@ -131,7 +121,7 @@
 						<li>Arrested Development</li>
 						<li>The I.T. Crowd</li>
 						<li>House M.D.</li>
-						<li>The Big Bang Theory</li>,
+						<li>The Big Bang Theory</li>
 						<li>How I Met Your Mother</li>
 						<li>Stargate series (especially SG-1)</li>
 						<li>Supernatural</li>
@@ -165,7 +155,7 @@
 			</div>
   		</div><!-- /row -->
 
-	<p>Now you know it all, happy?</p><p>All is not enough? Want to know anything else? Just <a href="http://batu.me/contact/">contact me</a>.</p>
+	<p>Now you know it all, happy?</p><p>All is not enough? Want to know anything else? Just <a href="http://batu.me/ask">ask me</a> on Formspring or <a href="http://batuhanicoz.com/contact">contact me</a>.</p>
 	
 	<h6><strong>Last updated:</strong> {{ last_updated }}</h6>
 	</div>
