--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -29,13 +29,9 @@
 	<br />Totally free*. Totally safe**. Totally anonymous***.
     <br />
 	<img style="padding: 0 2px 0 0; margin: 0; border: none;" src="http://www.google.com/talk/service/resources/chaticon.gif" alt="" width="16" height="14" /><img style="padding: 0 2px 0 0; margin: 0; border: none;" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqr7vcn8qvf6qdpl96k0m8cc599d93lvd95u2sgl0kp146kfa53jfb6md0r276anle8j95ivopt6p9ibjistu9kp3pmqbuobn3s27g412fkbtaisvsd29kljf02nt6uurkaf5gmmg010eb020sf47ld1jipljodpot56s52nal2m56cvvuqutj03as04&amp;w=9&amp;h=9" alt="" width="9" height="9" /><a title="Click here to chat with Fırat Batuhan İçöz" href="http://www.google.com/talk/service/badge/Start?tk=z01q6amlqr7vcn8qvf6qdpl96k0m8cc599d93lvd95u2sgl0kp146kfa53jfb6md0r276anle8j95ivopt6p9ibjistu9kp3pmqbuobn3s27g412fkbtaisvsd29kljf02nt6uurkaf5gmmg010eb020sf47ld1jipljodpot56s52nal2m56cvvuqutj03as04" target="_blank">Wanna chat?</a>
-	<br />
-	<i>*I won't open my web camera for you so I won't ask for your money.
-	**I didn't buy a SSL certificate, this connection is not safe. But connection in the chat page is.
-	***This is my website and I can track every click to every page of this website, I do have your information like your IP, browser, screen resolution, how did you lose your virginity, your service provider, what operating system you're using, how many minutes you spent on this page.</i>
     </p>
 
-    <h3>form <small><i>some people's favorite</i> way.</small></h3>
+    <!-- h3>form <small><i>some people's favorite</i> way.</small></h3>
     <p>just a simple form, names and e-mails are not required. also, this is the recommend way for death treats. (have some death treats? formspring is more anon. but this is faster, your choice.<br />
     
       <form>
@@ -70,14 +66,16 @@
       </form>
 
     <br />
-    </p>
+    </p -->
     <h3>other ways <small>just a <i>few other</i> way.</small></h3>
     <p>My primary cell phone number is +90 (538) 878 10 16 (Vodafone TR) and I'm a WhatsApp and blip.me user so you can use those applications to contact me.
     <br />
     </p>
  </div>
 </div>
-
+<i>*I won't open my web camera for you so I won't ask for your money.
+**I didn't buy a SSL certificate, this connection is not safe. But connection in the chat page is.
+***This is my website and I can track every click to every page of this website, I do have your information like your IP, browser, screen resolution, how did you lose your virginity, your service provider, what operating system you're using, how many minutes you spent on this page.</i>
 </section>
 
     </div> <!-- /container -->
