--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -31,44 +31,8 @@
 	<img style="padding: 0 2px 0 0; margin: 0; border: none;" src="http://www.google.com/talk/service/resources/chaticon.gif" alt="" width="16" height="14" /><img style="padding: 0 2px 0 0; margin: 0; border: none;" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqr7vcn8qvf6qdpl96k0m8cc599d93lvd95u2sgl0kp146kfa53jfb6md0r276anle8j95ivopt6p9ibjistu9kp3pmqbuobn3s27g412fkbtaisvsd29kljf02nt6uurkaf5gmmg010eb020sf47ld1jipljodpot56s52nal2m56cvvuqutj03as04&amp;w=9&amp;h=9" alt="" width="9" height="9" /><a title="Click here to chat with Fırat Batuhan İçöz" href="http://www.google.com/talk/service/badge/Start?tk=z01q6amlqr7vcn8qvf6qdpl96k0m8cc599d93lvd95u2sgl0kp146kfa53jfb6md0r276anle8j95ivopt6p9ibjistu9kp3pmqbuobn3s27g412fkbtaisvsd29kljf02nt6uurkaf5gmmg010eb020sf47ld1jipljodpot56s52nal2m56cvvuqutj03as04" target="_blank">Wanna chat?</a>
     </p>
 
-    <!-- h3>form <small><i>some people's favorite</i> way.</small></h3>
-    <p>just a simple form, names and e-mails are not required. also, this is the recommend way for death treats. (have some death treats? formspring is more anon. but this is faster, your choice.<br />
-    
-      <form>
-          <div class="clearfix">
-            <label for="textarea">Your message<strong>*</strong></label>
-            <div class="input">
-              <textarea class="xxlarge" id="textarea" name="textarea"></textarea>
-              <span class="help-inline">This is the only required field.</span>
-              <span class="help-block">
-                Be clean and use dots, commas and breaks. 
-              </span>
-            </div>
-          </div><!-- /clearfix -->
-        <fieldset>
-          <div class="clearfix">
-            <label for="xlInput">Your name</label>
-            <div class="input">
-              <input class="xlarge" id="xlInput" name="xlInput" size="30" type="text" />
-            </div>
-          </div><!-- /clearfix -->
-          <div class="clearfix">
-            <label for="xlInput">Your e-mail</label>
-            <div class="input">
-              <input class="xlarge" id="xlInput" name="xlInput" size="30" type="text" />
-            </div>
-          </div><!-- /clearfix -->
-        </fieldset>
-          <div class="actions">
-            <button type="submit" class="btn primary">Send this sucker!</button>&nbsp;<button type="reset" class="btn">le reset</button>
-          </div>
-        </fieldset>
-      </form>
-
-    <br />
-    </p -->
     <h3>other ways <small>just a <i>few other</i> way.</small></h3>
-    <p>My primary cell phone number is +90 (538) 878 10 16 (Vodafone TR) and I'm a WhatsApp and blip.me user so you can use those applications to contact me.
+    <p>You can use Skype ("batuhanicoz"), iChat ("batuhanicoz") or GTalk ("batuhanicoz@gmail.com") to contact me instantly.
     <br />
     </p>
  </div>
