--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html.twig" %}
 
 {% block title %}{{ app.translator.trans('about_title') }} {% endblock %}
-
+{% block is_about %} class="active"{% endblock %}
 {% block content %}
     <div class="container">
 
