--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -1,4 +1,5 @@
 {% extends "layout.html.twig" %}
+{% block is_homepage %} class="active"{% endblock %}
 
 {% block content %}
     <div class="container">
