--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -1,4 +1,5 @@
 {% extends "layout.html.twig" %}
+{% block is_contact %} class="active"{% endblock %}
 
 {% block content %}
     <div class="container">
