added some space before the icons

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -9,6 +9,7 @@
         <p>{{ app.translator.trans('homepage_tagline') }}</p>
  		<p>{{ app.translator.trans('homepage_currently') }}</p> 
 		<!-- p>I've been around for {{ beenalivefor }}.</p -->
+		<div class="clearfix"></div>
         <p style="text-decoration:none">
        	<a href="http://www.facebook.com/batuhanicoz">
     		<img src="./assets/img/icons/facebook-32x32.png" border="0" alt="Facebook" />
