--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -6,8 +6,8 @@
 
       <div class="hero-unit">
         <h1>{{ app.translator.trans('homepage_top_hello') }}</h1>
-        <p>{{ app.translator.trans('homepage_tagline') }}</p>
- 		<p>{{ app.translator.trans('homepage_currently') }}</p> 
+        <p>&nbsp;&nbsp;&nbsp;{{ app.translator.trans('homepage_tagline') }}</p>
+ 		<p>&nbsp;&nbsp;&nbsp;&nbsp;{{ app.translator.trans('homepage_currently') }}</p> 
 		<!-- p>I've been around for {{ beenalivefor }}.</p -->
 		<div class="clearfix"></div>
         <p style="text-decoration:none">
