--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -7,7 +7,7 @@
       <div class="hero-unit">
         <h1>{{ app.translator.trans('homepage_top_hello') }}</h1>
         <p>&nbsp;&nbsp;&nbsp;{{ app.translator.trans('homepage_tagline') }}</p>
- 		<p>&nbsp;&nbsp;&nbsp;&nbsp;{{ app.translator.trans('homepage_currently') }}</p> 
+ 		<p>{{ app.translator.trans('homepage_currently') }}</p> 
 		<!-- p>I've been around for {{ beenalivefor }}.</p -->
 		<div class="clearfix"></div>
         <p style="text-decoration:none">
