added language warning, again.

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -46,7 +46,7 @@
 	
 	{% if app.bi_browser_lang == "tr-TR" %}
 	{% if app.bi_domain == "batuhanicoz.com" %}
-	<!-- div class="container">
+	<div class="container">
 		<section id="language_alert">
 	      <div class="alert-message block-message info">
 	        <p><strong>Merhaba!</strong> Tarayıcı dilinizin Türkçe olduğunu farkettim, bu sitenin Türkçe versiyonu da olduğunu hatırlatayım dedim.</p>
@@ -55,7 +55,7 @@
 	        </div>
 	      </div>
 		</section>
-    </div -->
+    </div>
 	{% endif %}
 	{% endif %}
 	
