added some info :)

--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -15,18 +15,19 @@
   <div class="row">
     <div class="span16 columns">
     <div class="alert-message warning">
-      <p><strong>WARNING!</strong> This page is un-finished and can't be used as reference.</p>
+      <p><strong>WARNING!</strong> This page is un-finished and may have outdated/wrong information.</p>
     </div>
 	</div>
   </div><!-- /row -->
-	<div class="row show-grid" title="One-third and two-thirds layout">
+	<div class="row show-grid" title="Brief introduction">
 		<div class="span-two-thirds column">
       <h3>A brief introduction</h3>
 		<ul>
-			<li>My full name is Fırat Batuhan İçöz</li>
-			<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey to a Turkish family.</li>
-			<li>I'm studying on English language and English Literature at <a href="http://bursacumhuriyetlisesi.k12.tr/">Bursa Cumhuriyet Lisesi</a>[tr] as a high school junior.</li>
-			<li>I work as a web developer</li>
+			<li>My full name is Fırat Batuhan İçöz,</li>
+			<li>I was born on July 21, 1995 at <a href="http://maps.google.com/maps/place?cid=967334580752084145&amp;q=KONUR+CERRAH%C4%B0+TIP+MERKEZ%C4%B0,+Osmangazi,+Z%C3%BCbeyde+Han%C4%B1m+Caddesi,+Bursa,+Turkey&amp;hl=en&amp;ved=0CCcQ-gswAA&amp;sa=X&amp;ei=2I4-Tuv8BM-C_QaiqsH5DA&amp;sig2=FOmedKlpY6sdmDTEMqFUCw">Bursa Konur Hospital</a>, Bursa, Turkey to a Turkish family,</li>
+			<li>I'm working as a junior developer at <a href="http://limk.com">Limk</a>,</li>
+			<li>I'm studying on English language and English Literature at <a href="http://bursacumhuriyetlisesi.k12.tr/">Bursa Cumhuriyet Lisesi</a>[tr] as a high school junior,</li>
+			<li>I'm one of the co-founders of SosyalRadyo.</li>
 		</ul>
 		</div>
   	<div class="span-one-third column">
