--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -16,8 +16,8 @@
     keep in mind that it may take 1 to 3 days to get a respond.</p>
     
     <h3>e-mail(s) <small>are the <i>fastest</i> way.</small></h3>
-    <p>My primary e-mail address is i@batu.me but sometimes e-mail clients are finding it short and says it's not real, if that happens, you can use batuhanicoz@gmail.com, which is slower, but works. <br />
-    Also, if you're comfortable with Facebook Messages, you can always use batuhanicoz@facebook.com but if your e-mail ends up in Other section, sorry, I'm checking it once 1 week.
+    <p>My primary e-mail address is <a href="mailto:i@batu.me">i@batu.me</a> but sometimes e-mail clients are finding it short and says it's not real, if that happens, you can use <a href="mailto:batuhanicoz@gmail.com">batuhanicoz@gmail.com</a>, which is slower, but works. <br />
+    Also, if you're comfortable with Facebook Messages, you can always use <a href="mailto:batuhanicoz@facebook.com">batuhanicoz@facebook.com</a> but if your e-mail ends up in Other section, sorry, I'm checking it once 1 week.
     </p>
     
     <h3>phone(s) <small>my <i>favorite</i> way.</small></h3>
