--- a/views/legalinformation.html.twig
+++ b/views/legalinformation.html.twig
@@ -8,7 +8,7 @@
 ================================================== -->
 <section id="contact">
 <div class="page-header">
-  <h1>Legal Information <small>copyrights of my articles, codes or any other work.</small></h1>
+  <h1>Legal Informations <small>copyrights of my articles, codes or any other work.</small></h1>
 </div>
 <div class="row">
   <div class="span16 columns">
@@ -22,10 +22,16 @@
 			<li>gunce.batu.me</li>
 		</ul>
 		
-    <h3>Redirections</h3>
+    
+	<h3>General Disclaimer</h3>
+	<p>Everything I write on Twitter, FriendFeed, my blog(s) or any of my websites are my opinions and not the people/companies I have/am work(ed) for/with. I do not get money for anything I do and write.
+	</p>
+	<h3>Redirections</h3>
     <p>I can't be hold responsible for redirections from my domains to other domains and they can be redirected to bad domains, only "on.batu.me" links are trustable and is the official redirection service for "Batuhan Icoz's websites"
     </p>
-    
+    <h3>Questions answered on Formspring or Tumblr</h3>
+	<p>My answers on Formspring or Tumblr should not be taken seriously.  
+	</p>
     <h3>License of codes</h3>
     <p>Unless otherwise is indicated on project page on Batuhan Icoz's websites or Batuhan Icoz's github profile, all code shared is shared under MIT License. 
     <p>
