trying to break fastest fox

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -44,7 +44,7 @@
 			<a class="btn primary large" href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }} &raquo;</a>
 		</p>
       </div>
-
+	<!-- this is to break fastestfox plugin --><a href="#thereisnonextpage"></a>
     </div> <!-- /container -->
 
 {% endblock %}
