this should break it

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -44,7 +44,7 @@
 			<a class="btn primary large" href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }} &raquo;</a>
 		</p>
       </div>
-	<!-- this is to break fastestfox plugin --><a href="#thereisnonextpage"></a>
+	<!-- this is to break fastestfox plugin --><div id="this_is_not_real" style="display;none"><a href="#thereisnonextpage">&raquo;</a></div>
     </div> <!-- /container -->
 
 {% endblock %}
