--- a/views/legalinformations.html.twig
+++ b/views/legalinformations.html.twig
@@ -8,32 +8,21 @@
 ================================================== -->
 <section id="contact">
 <div class="page-header">
-  <h1>Legal Informations <small>copyrights of my articles, codes or any other work.</small></h1>
+  <h1>Legal Informations <small>copyrights, licenses, disclaimer etc.</small></h1>
 </div>
 <div class="row">
   <div class="span16 columns">
-    <p>On this page you can find legal information like which licenses I use.
-	</p>
-	<p>
-	"Batuhan Icoz's websites" means every domain (a subdomain should be listed as a standalone domain, this means if there is "example.com" on the list and there is no "blog.example.com" on the list, "blog.example.com" can't be counted as "Batuhan Icoz's website") listed below:</p>
-     	<ul>
-	 		<li>batuhanicoz.com</li>
-			<li>batuhanicoz.com.tr</li>
-			<li>gunce.batu.me</li>
-		</ul>
-		
-    
 	<h3>General Disclaimer</h3>
-	<p>Everything I write on Twitter, FriendFeed, my blog(s) or any of my websites are my opinions and not the people/companies I have/am work(ed) for/with. I do not get money for anything I do and write.
+	<p>Everything I write on Twitter, FriendFeed, my blog(s) or any of my websites are my opinions and not the people/companies I have/am work(ed) for/with. I do not get money for anything I say or write.
 	</p>
 	<h3>Redirections</h3>
-    <p>I can't be hold responsible for redirections from my domains to other domains and they can be redirected to bad domains, only "on.batu.me" links are trustable and is the official redirection service for "Batuhan Icoz's websites"
+    <p>I can't be hold responsible for redirections from my domains to other domains and they can be redirected to bad domains, only "on.batu.me" links are trustable and is the official redirection service for my websites.
     </p>
     <h3>Questions answered on Formspring or Tumblr</h3>
 	<p>My answers on Formspring or Tumblr should not be taken seriously.  
 	</p>
     <h3>License of codes</h3>
-    <p>Unless otherwise is indicated on project page on Batuhan Icoz's websites or Batuhan Icoz's github profile, all code shared is shared under MIT License. 
+    <p>Unless otherwise is indicated on project page on my websites or Batuhan Icoz's github profile, all code shared is shared under MIT License. 
     <p>
 	Copyright (c) 2011 Fırat Batuhan İçöz
 	<br />
