assets move to https://github.com/batuhanicoz/batuhanicoz.github.com

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -13,28 +13,28 @@
 		<div class="clearfix"></div>
         <p style="text-decoration:none">
        	<a href="http://www.facebook.com/batuhanicoz">
-    		<img src="./assets/img/icons/facebook-32x32.png" border="0" alt="Facebook" />
+    		<img src="http://static.batu.me/assets/img/icons/facebook-32x32.png" border="0" alt="Facebook" />
        	</a>
         <a href="https://github.com/batuhanicoz">
-        	<img src="./assets/img/icons/github-32x32.png" border="0" alt="Github" />
+        	<img src="http://static.batu.me/assets/img/icons/github-32x32.png" border="0" alt="Github" />
         </a>
 		<a href="http://shareables.me">
-			<img src="./assets/img/icons/tumblr-32x32.png" border="0" alt="Tumblr" />
+			<img src="http://static.batu.me/assets/img/icons/tumblr-32x32.png" border="0" alt="Tumblr" />
 		</a>
   		<a href="http://foursquare.com/batuhanicoz">
-  			<img src="./assets/img/icons/foursquare-32x32.png" border="0" alt="Foursquare" />
+  			<img src="http://static.batu.me/assets/img/icons/foursquare-32x32.png" border="0" alt="Foursquare" />
   		</a>
 		<a href="http://www.linkedin.com/in/batuhanicoz">
-			<img src="./assets/img/icons/linkedin-32x32.png" border="0" alt="LinkedIn" />
+			<img src="http://static.batu.me/assets/img/icons/linkedin-32x32.png" border="0" alt="LinkedIn" />
 		</a>
 		<a href="https://plus.google.com/107704817814341858380">
-			<img src="./assets/img/icons/google+-32x32.png" border="0" alt="Google+" />
+			<img src="http://static.batu.me/assets/img/icons/google+-32x32.png" border="0" alt="Google+" />
 		</a>
 		<a href="http://last.fm/user/batuhanicoz">
-			<img src="./assets/img/icons/lastfm-32x32.png" border="0" alt="Last.fm" />
+			<img src="http://static.batu.me/assets/img/icons/lastfm-32x32.png" border="0" alt="Last.fm" />
 		</a>
 		<a href="http://www.formspring.me/batuhanicoz">
-			<img src="./assets/img/icons/formspring-32x32.png" border="0" alt="Formspring" />
+			<img src="http://static.batu.me/assets/img/icons/formspring-32x32.png" border="0" alt="Formspring" />
 		</a>
 		<a href="http://twitter.com/batuhanicoz" class="twitter-follow-button" data-show-count="false">Follow @batuhanicoz</a>
 		</p>
