Revert "assets move to https://github.com/batuhanicoz/batuhanicoz.github.com"
This reverts commit 064b8e195c50cb0107a554dd0f5411a59a9f1ca4.

--- a/views/about.html.twig
+++ b/views/about.html.twig
@@ -32,7 +32,7 @@
 		</div>
   	<div class="span-one-third column">
 	      <p>
-	      	<img width="250px" src="http://static.batu.me/assets/img/avatar.jpg" />
+	      	<img width="250px" src="http://batu.me/wp-content/uploads/2011/01/30194_1461498257498_1234684607_31364564_2550044_n-3.jpg" />
 	      </p>
 			</div>
 		</div><!-- /row -->
