--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -12,9 +12,14 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="http://static.batu.me/assets/css/bootstrap-1.2.0.min.css" rel="stylesheet">
-    <link href="http://static.batu.me/assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-1.2.0.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   </head>
 
   <body>
