--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -1,5 +1,7 @@
 {% extends "layout.html.twig" %}
 {% block is_contact %} class="active"{% endblock %}
+{% block add_to_header %} {% endblock %}
+{% block add_to_footer %} <script type="text/javascript" src="http://download.skype.com/share/skypebuttons/js/skypeCheck.js"></script> {% endblock %}
 
 {% block content %}
     <div class="container">
@@ -8,39 +10,34 @@
 ================================================== -->
 <section id="contact">
 <div class="page-header">
-  <h1>Contact me <small>my e-mails, mobile number, home address and more.</small></h1>
+  <h1>Contact me <small>my contact information</small></h1>
 </div>
 <div class="row">
   <div class="span16 columns">
-    <p>It is fairly easy to contact me and generally I respond fast, but sometimes, I can be too busy to answer, so, before you try to contact me, 
-    keep in mind that it may take 1 to 3 days to get a respond.</p>
+    <p>I'm really easy to get in touch with, but don't take my word for it, try it today, for FREE!!1</p>
     
     <h3>e-mail(s) <small>are the <i>fastest</i> way.</small></h3>
-    <p>My primary e-mail address is <a href="mailto:i@batu.me">i@batu.me</a> but sometimes e-mail clients are finding it short and says it's not real, if that happens, you can use <a href="mailto:batuhanicoz@gmail.com">batuhanicoz@gmail.com</a>, which is slower, but works. <br />
-    Also, if you're comfortable with Facebook Messages, you can always use <a href="mailto:batuhanicoz@facebook.com">batuhanicoz@facebook.com</a> but if your e-mail ends up in Other section, sorry, I'm checking it once 1 week.
+    <p>My primary e-mail address is <a href="mailto:i@batu.me">i@batu.me</a> but some apps finds it short or "unreal", if that happens, use <a href="mailto:batuhanicoz@gmail.com">batuhanicoz@gmail.com</a>, which is slower, but, you know, works. <br />
+    <!-- Also, if you're comfortable with Facebook Messages, you can always use <a href="mailto:batuhanicoz@facebook.com">batuhanicoz@facebook.com</a> but if your e-mail ends up in Other section, sorry, I'm not checking it everyday. -->
     </p>
     
-    <h3>phone(s) <small>my <i>favorite</i> way.</small></h3>
-    <p>My primary cell phone number is +90 (538) 878 10 16 (Vodafone TR) and I'm a WhatsApp and blip.me user so you can use those applications to contact me.
+    <h3>phone(s) <small>are my <i>favorite</i> way.</small></h3>
+    <p>My mobile number is <a href="tel:+905388781016">+90 (538) 878 10 16</a> (Vodafone TR) and do have WhatsApp and blip.me on my phone.
     <br />
     </p>
 
     <h3>anonymous chat <small>most <i>anonymous</i> way.</small></h3>
-    <p>If you click on "Wanna chat?" link, it will open a page where you can anonymously chat with me.
-	<br />Totally free*. Totally safe**. Totally anonymous***.
-    <br />
-	<img style="padding: 0 2px 0 0; margin: 0; border: none;" src="http://www.google.com/talk/service/resources/chaticon.gif" alt="" width="16" height="14" /><img style="padding: 0 2px 0 0; margin: 0; border: none;" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqr7vcn8qvf6qdpl96k0m8cc599d93lvd95u2sgl0kp146kfa53jfb6md0r276anle8j95ivopt6p9ibjistu9kp3pmqbuobn3s27g412fkbtaisvsd29kljf02nt6uurkaf5gmmg010eb020sf47ld1jipljodpot56s52nal2m56cvvuqutj03as04&amp;w=9&amp;h=9" alt="" width="9" height="9" /><a title="Click here to chat with Fırat Batuhan İçöz" href="http://www.google.com/talk/service/badge/Start?tk=z01q6amlqr7vcn8qvf6qdpl96k0m8cc599d93lvd95u2sgl0kp146kfa53jfb6md0r276anle8j95ivopt6p9ibjistu9kp3pmqbuobn3s27g412fkbtaisvsd29kljf02nt6uurkaf5gmmg010eb020sf47ld1jipljodpot56s52nal2m56cvvuqutj03as04" target="_blank">Wanna chat?</a>
+    <p>
+	<img height="9" width="9" style="padding:0 2px 0 0;margin:0;border:none" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqt4368hboufgb4q0ctfihehp4am5k3l4pqi9kge52q39te78c548k9mu40iup1ddupiuffhj3ac7gqln9frth1190m6f8u2pefp3monlnd83khhu3spd7btsam16o9sojk7o921f6mg9t44d0acs3p5d2s6una5qd&amp;w=9&amp;h=9" alt="">
+	<a href="http://www.google.com/talk/service/badge/Start?tk=z01q6amlqt4368hboufgb4q0ctfihehp4am5k3l4pqi9kge52q39te78c548k9mu40iup1ddupiuffhj3ac7gqln9frth1190m6f8u2pefp3monlnd83khhu3spd7btsam16o9sojk7o921f6mg9t44d0acs3p5d2s6una5qd" target="_blank" title="Click here to chat">Click here</a> and if I'm online, you'll have a direct anonymous line to me. Cool, huh?
     </p>
 
-    <h3>other ways <small>just a <i>few other</i> way.</small></h3>
-    <p>You can use Skype ("batuhanicoz"), iChat ("batuhanicoz") or GTalk ("batuhanicoz@gmail.com") to contact me instantly.
+    <h3>other</h3>
+    <p>You can Skype ("batuhanicoz") (<a href="skype:batuhanicoz?call"><img src="http://mystatus.skype.com/smallicon/batuhanicoz" style="border: none;" width="16" height="16" alt="My status" /></a>), iChat ("batuhanicoz") or GTalk ("batuhanicoz@gmail.com") (<img height="9" width="9" style="padding:0 2px 0 0;margin:0;border:none" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqt4368hboufgb4q0ctfihehp4am5k3l4pqi9kge52q39te78c548k9mu40iup1ddupiuffhj3ac7gqln9frth1190m6f8u2pefp3monlnd83khhu3spd7btsam16o9sojk7o921f6mg9t44d0acs3p5d2s6una5qd&amp;w=9&amp;h=9" alt="">) me.
     <br />
     </p>
  </div>
 </div>
-<i>*I won't open my web camera for you so I won't ask for your money.
-**I didn't buy a SSL certificate, this connection is not safe. But connection in the chat page is.
-***This is my website and I can track every click to every page of this website, I do have your information like your IP, browser, screen resolution, how did you lose your virginity, your service provider, what operating system you're using, how many minutes you spent on this page.</i>
 </section>
 
     </div> <!-- /container -->
