--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -17,7 +17,7 @@
     <p>I'm really easy to get in touch with, but don't take my word for it, try it today, for FREE!!1</p>
     
     <h3>e-mail(s) <small>are the <i>fastest</i> way.</small></h3>
-    <p>My primary e-mail address is <a href="mailto:i@batu.me">i@batu.me</a> but some apps finds it short or "unreal", if that happens, use <a href="mailto:batuhanicoz@gmail.com">batuhanicoz@gmail.com</a>, which is slower, but, you know, works. <br />
+    <p>My e-mail is <a href="mailto:i@batu.me">i@batu.me</a> but some apps finds it short and "unreal", if that happens, use <a href="mailto:batuhanicoz@gmail.com">batuhanicoz@gmail.com</a>, which is less cool, but, you know, works. <br />
     <!-- Also, if you're comfortable with Facebook Messages, you can always use <a href="mailto:batuhanicoz@facebook.com">batuhanicoz@facebook.com</a> but if your e-mail ends up in Other section, sorry, I'm not checking it everyday. -->
     </p>
     
@@ -26,16 +26,39 @@
     <br />
     </p>
 
-    <h3>anonymous chat <small>most <i>anonymous</i> way.</small></h3>
+    <h3>anonymous chat <img height="9" width="9" style="padding:0 2px 0 0;margin:0;border:none" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqt4368hboufgb4q0ctfihehp4am5k3l4pqi9kge52q39te78c548k9mu40iup1ddupiuffhj3ac7gqln9frth1190m6f8u2pefp3monlnd83khhu3spd7btsam16o9sojk7o921f6mg9t44d0acs3p5d2s6una5qd&amp;w=9&amp;h=9" alt=""><small>most <i>anonymous</i> way.</small></h3>
     <p>
-	<img height="9" width="9" style="padding:0 2px 0 0;margin:0;border:none" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqt4368hboufgb4q0ctfihehp4am5k3l4pqi9kge52q39te78c548k9mu40iup1ddupiuffhj3ac7gqln9frth1190m6f8u2pefp3monlnd83khhu3spd7btsam16o9sojk7o921f6mg9t44d0acs3p5d2s6una5qd&amp;w=9&amp;h=9" alt="">
 	<a href="http://www.google.com/talk/service/badge/Start?tk=z01q6amlqt4368hboufgb4q0ctfihehp4am5k3l4pqi9kge52q39te78c548k9mu40iup1ddupiuffhj3ac7gqln9frth1190m6f8u2pefp3monlnd83khhu3spd7btsam16o9sojk7o921f6mg9t44d0acs3p5d2s6una5qd" target="_blank" title="Click here to chat">Click here</a> and if I'm online, you'll have a direct anonymous line to me. Cool, huh?
     </p>
 
     <h3>other</h3>
-    <p>You can Skype ("batuhanicoz") (<a href="skype:batuhanicoz?call"><img src="http://mystatus.skype.com/smallicon/batuhanicoz" style="border: none;" width="16" height="16" alt="My status" /></a>), iChat ("batuhanicoz") or GTalk ("batuhanicoz@gmail.com") (<img height="9" width="9" style="padding:0 2px 0 0;margin:0;border:none" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqt4368hboufgb4q0ctfihehp4am5k3l4pqi9kge52q39te78c548k9mu40iup1ddupiuffhj3ac7gqln9frth1190m6f8u2pefp3monlnd83khhu3spd7btsam16o9sojk7o921f6mg9t44d0acs3p5d2s6una5qd&amp;w=9&amp;h=9" alt="">) me.
+    <p>You can Skype ("<a href="skype:batuhanicoz?add">batuhanicoz</a>") <a href="skype:batuhanicoz?call"><img src="http://mystatus.skype.com/smallicon/batuhanicoz" style="border: none;" width="16" height="16" alt="My status" /></a>, iChat ("batuhanicoz") or GTalk ("batuhanicoz@gmail.com") <img height="9" width="9" style="padding:0 2px 0 0;margin:0;border:none" src="http://www.google.com/talk/service/badge/Show?tk=z01q6amlqt4368hboufgb4q0ctfihehp4am5k3l4pqi9kge52q39te78c548k9mu40iup1ddupiuffhj3ac7gqln9frth1190m6f8u2pefp3monlnd83khhu3spd7btsam16o9sojk7o921f6mg9t44d0acs3p5d2s6una5qd&amp;w=9&amp;h=9" alt=""> me.
     <br />
     </p>
+
+	<p>
+	<a href="http://static.batu.me/assets/batuhanicoz.vcf">
+		<img src="http://static.batu.me/assets/img/icons/vcard-32x32.png" border="0" alt="vCard" />
+   	</a>
+	<a href="mailto:batuhanicoz@gmail.com">
+		<img src="http://static.batu.me/assets/img/icons/email-32x32.png" border="0" alt="vCard" />
+   	</a>
+	<a href="skype:batuhanicoz?add">
+		<img src="http://static.batu.me/assets/img/icons/skype-32x32.png" border="0" alt="Skype" />
+   	</a>
+	<a href="msnim:add?contact=batuhanicoz@gmail.com">
+		<img src="http://static.batu.me/assets/img/icons/messenger-32x32.png" border="0" alt="Windows Live Messenger" />
+   	</a>
+	<a href="http://www.facebook.com/batuhanicoz">
+		<img src="http://static.batu.me/assets/img/icons/facebook-32x32.png" border="0" alt="Facebook" />
+   	</a>
+	<a href="http://twitter.com/batuhanicoz">
+		<img src="http://static.batu.me/assets/img/icons/twitter-32x32.png" border="0" alt="Twitter" />
+   	</a>
+	<a href="http://www.formspring.me/batuhanicoz">
+		<img src="http://static.batu.me/assets/img/icons/formspring-32x32.png" border="0" alt="Formspring" />
+	</a>
+	</p>
  </div>
 </div>
 </section>
