--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -37,7 +37,7 @@
     </p>
 
 	<p>
-	<a href="http://static.batu.me/assets/batuhanicoz.vcf">
+	<a href="http://static.batu.me/assets/other/batuhanicoz.vcf">
 		<img src="http://static.batu.me/assets/img/icons/vcard-32x32.png" border="0" alt="vCard" />
    	</a>
 	<a href="mailto:batuhanicoz@gmail.com">
