few improvements and upgrades

--- a/views/homepage.html.twig
+++ b/views/homepage.html.twig
@@ -39,9 +39,9 @@
 		<a href="http://twitter.com/batuhanicoz" class="twitter-follow-button" data-show-count="false">Follow @batuhanicoz</a>
 		</p>
 		<p>
-			<a class="btn primary large" href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_about') }}">{{ app.translator.trans('l_about_me') }}</a>
+			<a class="btn primary large" href="http://{{ app.domain }}/{{ app.translator.trans('route_about') }}">{{ app.translator.trans('l_about_me') }}</a>
 			<!-- a class="btn primary large">{{ app.translator.trans('l_my_projects') }}</a -->
-			<a class="btn primary large" href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }}</a>
+			<a class="btn primary large" href="http://{{ app.domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }}</a>
 		</p>
       </div>
     </div> <!-- /container -->
