--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}Fırat Batuhan İçöz</title>
-    <meta name="description" content="{{ desc }}">
+    <meta name="description" content="{{ app.translator.trans('desc2') }}">
     <meta name="author" content="Fırat Batuhan İçöz">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -12,10 +12,31 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="http://static.batu.me/assets/css/bootstrap-1.2.0.min.css" rel="stylesheet">
-    <link href="http://static.batu.me/assets/css/custom.bi.css" rel="stylesheet">
+    <link href="http://static.batu.me/assets/css/bootstrap-1.3.0.min.css" rel="stylesheet">
+    <style type="text/css">
+
+      body {
+        padding-top: 60px;
+      }
+    </style>
+
 	{% block add_to_header %}{% endblock %}
 
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-11142497-2']);
+	  _gaq.push(['_setDomainName', 'batuhanicoz.com']);
+	  _gaq.push(['_setAllowLinker', true]);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
   </head>
 
   <body>
@@ -27,10 +48,10 @@
         <div class="container">
           <h3><a href="http://batu.me/1">{{ app.translator.trans('l_batuhans') }}</a></h3>
           <ul class="nav">
-	      	<li{% block is_homepage %}{% endblock %}><a href="http://{{ app.bi_domain }}/">{{ app.translator.trans('l_homepage') }}</a></li>
-	      	<li{% block is_about %}{% endblock %}><a href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_about') }}">{{ app.translator.trans('l_about_me') }}</a></li>
+	      	<li{% block is_homepage %}{% endblock %}><a href="http://{{ app.domain }}/">{{ app.translator.trans('l_homepage') }}</a></li>
+	      	<li{% block is_about %}{% endblock %}><a href="http://{{ app.domain }}/{{ app.translator.trans('route_about') }}">{{ app.translator.trans('l_about_me') }}</a></li>
 	      	<li><a href="http://shareables.me">Shareables</a></li>
-	      	<li{% block is_contact %}{% endblock %}><a href="http://{{ app.bi_domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }}</a></li>
+	      	<li{% block is_contact %}{% endblock %}><a href="http://{{ app.domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }}</a></li>
           </ul>
           <ul class="nav secondary-nav">
 			<li></li>
@@ -40,7 +61,7 @@
     </div>
 	<div class="topbar_break"></div>
 	
-	{% if app.bi_domain == "batuhanicoz.com.tr" %}
+	{% if app.domain == "batuhanicoz.com.tr" %}
 	<div class="container">
 		<section id="language_alert">
 	      <div class="alert-message block-message info">
@@ -52,7 +73,7 @@
 		
 	<!--
 	{% if app.bi_browser_lang == "tr-TR" %}
-	{% if app.bi_domain == "batuhanicoz.com" %}
+	{% if app.domain == "batuhanicoz.com" %}
 	<div class="container">
 		<section id="language_alert">
 	      <div class="alert-message block-message info">
@@ -73,7 +94,7 @@
     	<footer>
         	<div class="row show-grid">
 			    <div class="span-two-thirds column">
-			    	<fb:like href="http://www.facebook.com/pages/Batuhan-Icoz/223563634322794" send="true" width="450" show_faces="true" font=""></fb:like>
+			    	<a href="http://{{ app.domain }}/{{ app.translator.trans('route_legal') }}">{{ app.translator.trans('l_legal') }}</a>
 			    </div>
 	 			<div class="span-one-third column" align="right">
 	 				<p>&copy; 2011 Fırat Batuhan İçöz</p>
@@ -81,7 +102,6 @@
 		  </div><!-- /row -->
 		</footer>
     </div>
-    <div id="fb-root"></div>
     <!-- Le javascript -->
     <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
     <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
@@ -93,19 +113,15 @@
 	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 	  })();
 	</script>
-	<script src="http://connect.facebook.net/en_US/all.js#appId=204305079632336&amp;xfbml=1"></script>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) {return;}
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=250987194917493";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+	 
 	{% block add_to_footer %}{% endblock %}
-	<!-- Piwik --> 
-	<script type="text/javascript">
-	var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.batu.me/" : "http://stats.batu.me/");
-	document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-	</script><script type="text/javascript">
-	try {
-	var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 9);
-	piwikTracker.trackPageView();
-	piwikTracker.enableLinkTracking();
-	} catch( err ) {}
-	</script><noscript><p><img src="http://stats.batu.me/piwik.php?idsite=9" style="border:0" alt="" /></p></noscript>
-	<!-- End Piwik Tracking Code -->
   </body>
 </html>
