making language warning more meaningful

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -65,7 +65,7 @@
 	<div class="container">
 		<section id="language_alert">
 	      <div class="alert-message block-message info">
-	        <p><strong>Merhaba,</strong> henüz bu sitedeki bilgileri tamamlayamadığımdan sitemin Türkçe çevirisi eksiktir, tüm kısımları yakında çevirmeyi planlamaktayım..</p>
+	        <p><strong>Merhaba,</strong> henüz sitemin Türkçe çevirisini tamamlayamadığımdan bazı kısımları İngilizce olarak görebilirsiniz.</p>
 	      </div>
 		</section>
     </div>
