--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}Fırat Batuhan İçöz</title>
-    <meta name="description" content="{{ app.translator.trans('desc2') }}">
+    <meta name="description" content="{% block desc %}{% endblock %}">
     <meta name="author" content="Fırat Batuhan İçöz">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
