--- a/views/pages/tr/okullarinkapanmasina.html.twig
+++ b/views/pages/tr/okullarinkapanmasina.html.twig
@@ -1,5 +1,6 @@
 {% extends "layout.html.twig" %}
 {% block title %}Okulların kapanmasına kaç gün var? - {% endblock %}
+{% block desc %}Okulların kapanmasına gün, saat, dakika ve saniye :) sayan ufak bir sayaç. (c) Batuhan İçöz{% endblock %}
 
 {% block add_to_footer %}
 <script src="http://static.batu.me/assets/javascript/libs/jquery.jcountdown.js" type="text/javascript"></script>
