fixing fucking google analytics code

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -26,7 +26,7 @@
 
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-11142497-2']);
-	  _gaq.push(['_setDomainName', 'batuhanicoz.com']);
+	  _gaq.push(['_setDomainName', 'none']);
 	  _gaq.push(['_setAllowLinker', true]);
 	  _gaq.push(['_trackPageview']);
 
